--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 </head>
 <body>
-<div clss="container">
-	<div class="row">
-		<h1>Ενόργανη Γυμναστική</h1>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<h1>Τι είναι η ενόργανη γυμναστική</h1>
+	<div class="container">
+		<div class="row">
+			<h1>Ενόργανη Γυμναστική</h1>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6">
-			<img src="img/enorgani.jpg">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Τι είναι η ενόργανη γυμναστική;</h2>
+			</div>
 		</div>
-		<div class="col-md-6">
-			
-			<p class="pppp">Είναι το άθλημα της αγωνιστικής γυμναστικής. Η ονομασία της προκύπτει από το γεγονός ότι ο αθλητής ή η αθλήτρια εκτελεί ένα πρόγραμμα σε ένα ειδικά διαμορφωμένο όργανο, με ή χωρίς χρονικό περιορισμό (ανάλογα με το όργανο) και χωρίς τη συνοδεία μουσικής (με εξαίρεση τις ασκήσεις εδάφους γυναικών).Κατάλληλη ηλικία για να ξεκινήσει ένα παιδί ενόργανη γυμναστική είναι η ηλικια των 3-4 χρονών αφού αποκτάµια πολύπλευρη καλλιέργεια των κινητικών και φυσικών του ικανοτήτων.</p>
+		<div class="row">
+			<div class="col-md-4">
+				<img class="proti-ikona" src="img/enorgani.jpg">
+			</div>
+			<div class="col-md-8">
+				
+				<p class="pppp">Είναι το άθλημα της αγωνιστικής γυμναστικής. Η ονομασία της προκύπτει από το γεγονός ότι ο αθλητής ή η αθλήτρια εκτελεί ένα πρόγραμμα σε ένα ειδικά διαμορφωμένο όργανο, με ή χωρίς χρονικό περιορισμό (ανάλογα με το όργανο) και χωρίς τη συνοδεία μουσικής (με εξαίρεση τις ασκήσεις εδάφους γυναικών).Κατάλληλη ηλικία για να ξεκινήσει ένα παιδί ενόργανη γυμναστική είναι η ηλικια των 3-4 χρονών αφού αποκτάµια πολύπλευρη καλλιέργεια των κινητικών και φυσικών του ικανοτήτων.</p>
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4">
-			<p class= "tttt">Οι άντρες διαγωνίζονται σε έξι όργανα: ασκήσεις εδάφους, πλάγιο ίππο, κρίκους, άλμα, παράλληλους ζυγούς και μονόζυγο, ενώ οι γυναίκες σε τέσσερα: άλμα, δίζυγο ή ασύμμετρους ζυγούς, δοκό ισορροπίας και ασκήσεις εδάφους.</p>
-		</div>
-		<div class="col-md-8">
-			
-		</div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-3">
-		
-		</div>
-		<div class="col-md-6">
+		<div class="row">
+			<div class="col-md-4">
+				<p class= "tttt">Οι άντρες διαγωνίζονται σε έξι όργανα: ασκήσεις εδάφους, πλάγιο ίππο, κρίκους, άλμα, παράλληλους ζυγούς και μονόζυγο, ενώ οι γυναίκες σε τέσσερα: άλμα, δίζυγο ή ασύμμετρους ζυγούς, δοκό ισορροπίας και ασκήσεις εδάφους.</p>
+			</div>
+			<div class="col-md-8">
+				<img class="deuterh-eikona" src="img/petrounias.png">
+			</div>
 
 		</div>
-		<div class="col-md-3">
-
+		<div class="row">
+			<div class="col-md-3">
+				<img src="img/gum.jpg">
+			</div>
+			<div class="col-md-5">
+					<p class="nnnn">Με την ενόργανη γυμναστική τα παιδιά καλλιεργούν τις φυσικές τουσ ιδιότητες ,όπως ταχύτητα,δύναμη,ευλυγισία ακόμα και την χορευτικότητα τους. Επίσης βοηθά στον αυτοέλεγχο σώματος και πνεύματος, στην επιμονή και την υπομονή,στην ομαδικόητα,τον σεβασμό προς τους συναθλητές τους και για να αποκτήσουν αυτοπεποίθηση.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="img/gumn.jpg">
+			</div>
 		</div>
 	</div>
 </body>
